# althread

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  test-examples.sh  test-ltl-examples.sh
cli/: Cargo.toml
cli/src/: args.rs  git.rs  main.rs  package.rs  resolver.rs
doc/: docusaurus.config.ts  docusaurus.dev.config.ts  index.html  package.json  pnpm-lock.yaml
examples/: TP2-communication.alt  TP2-election.alt  casse.alt  coffee_machine.alt  concurrency.alt  fibo.alt  ident.alt  list-of-list.alt  loop-sum.alt  ltl-always-eventually-fail.alt  ltl-always-eventually.alt  ltl-boolean-workflow.alt  ltl-bounded-buffer.alt  ltl-broadcast-fail.alt  ltl-broadcast-pass.alt  ltl-broadcast.alt  ltl-deadlock-freedom.alt  ltl-eventually-simple.alt  ltl-implication-fail.alt  ltl-implications.alt  ltl-multiple-properties.alt  ltl-mutual-exclusion.alt  ltl-resource-allocation.alt  ltl-safety-simple.alt  ltl-safety-violation.alt  ltl-state-machine.alt  max.alt  peterson_mutual_exlusion.alt  readers_writers.alt  ring-election-eventually.alt  ring-election.alt  shared-list.alt  test-atomic.alt  test-break.alt  test-channels.alt  test-if-else.alt  test-list.alt  test-ltl-simple.alt  test-reaches-simple.alt  test-wait.alt  (+3 more)
interpreter/: Cargo.toml
interpreter/benches/: bench-examples.rs
interpreter/src/: althread.pest  args.rs  error.rs  lib.rs  main.rs  parser.rs
interpreter/src/analysis/: cfg.rs  control_flow_graph.rs  mod.rs
interpreter/src/ast/: block.rs  condition_block.rs  import_block.rs  ltl_condition_block.rs  mod.rs  node.rs
interpreter/src/ast/statement/: atomic.rs  break_loop.rs  channel_declaration.rs  declaration.rs  fn_call.rs  fn_return.rs  for_control.rs  if_control.rs  label.rs  loop_control.rs  mod.rs  receive.rs  run_call.rs  send.rs  wait.rs  waiting_case.rs  while_control.rs
interpreter/src/ast/statement/assignment/: binary_assignment.rs  mod.rs
interpreter/src/ast/statement/expression/: binary_expression.rs  list_expression.rs  mod.rs  primary_expression.rs  tuple_expression.rs  unary_expression.rs
interpreter/src/ast/token/: args_list.rs  binary_assignment_operator.rs  binary_operator.rs  condition_keyword.rs  datatype.rs  declaration_keyword.rs  identifier.rs  literal.rs  mod.rs  null_identifier.rs  object_identifier.rs  tuple_identifier.rs  unary_operator.rs
interpreter/src/checker/: ltl_integration_tests.rs  mod.rs
interpreter/src/checker/ltl/: ast.rs  automaton.rs  automaton_tests.rs  compiled.rs  debug.rs  evaluator.rs  integration_example.rs  mod.rs  monitor.rs  quantifier.rs  usage_examples.rs
interpreter/src/compiler/: compiler.rs  ltl.rs  mod.rs  prescan.rs  stdlib.rs
interpreter/src/env/: instruction.rs  mod.rs
interpreter/src/module_resolver/: filesystem.rs  mod.rs  module_resolver.rs
interpreter/src/parser/: chumsky.rs  syntax.rs
interpreter/src/vm/: channels.rs  instruction.rs  mod.rs  running_program.rs
interpreter/tests/: compiler.rs  parser_backends.rs
web/: .gitignore  Cargo.toml  (+8 more)
(+179 files in other folders)
