[package]
name = "althread-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
althread = { workspace = true }
fastrand = { workspace = true }
owo-colors = "4.1.0"
ordered-float.workspace = true
lazy_static.workspace = true
serde = { version = "1.0", features = ["derive"] }
toml = { workspace = true}
git2 = "0.18"
semver = "1.0"
log = { workspace = true }
env_logger = { workspace = true }

[lints]
workspace = true
