[package]
name = "althread"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true


[dependencies]
lazy_static = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
fastrand = { workspace = true }
serde = { workspace = true }
ordered-float = { workspace = true }
criterion = "0.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench-examples"
harness = false