[package]
name = "althread"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true


[dependencies]
lazy_static = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
fastrand = { workspace = true }
serde = { workspace = true }
ordered-float = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
toml = {workspace = true }

[[bench]]
name = "bench-examples"
harness = false